--- a/index.html
+++ b/index.html
@@ -519,8 +519,8 @@
             <p>Fill out the form below, and we'll get back to you shortly to discuss enrollment.</p>
 
             <div class="contact-form">
-		<form method="POST" data-netlify="true">
-                    <label for="parent-name">Parent's Name:</label>
+		<form name="contact" netlify>
+		    <label for="parent-name">Parent's Name:</label>
                     <input type="text" id="parent-name" name="parentName" required>
 
                     <label for="parent-email">Parent's Email:</label>
